--- a/src/components/DevToolsApp.module.scss
+++ b/src/components/DevToolsApp.module.scss
@@ -1,16 +1,12 @@
-:global(body) {
-  margin: 0;
-}
 .masterDetail {
   display: flex;
-  flex-direction: row nowrap;
+  flex-flow: row nowrap;
   height: 100vh;
   align-items: stretch;
 }
 
-.master,
-.detail {
-  padding: 0.25rem 0.5rem;
+.detailBody {
+  padding: 0.5rem 0.25rem;
 }
 
 .master {
@@ -19,6 +15,40 @@
 
 .detail {
   flex: 1 0;
-  background-color: #444444;
-  border-left: 1px solid #555555;
+  background-color: #f5f5f5;
+  border-left: 1px solid #e5e5e5;
+  color: #333;
+}
+
+.detailHeader {
+  background-color: #555555;
+  border-bottom: 1px solid #e5e5e511;
+
+  h2 {
+    padding: 0.25rem;
+    margin: 0;
+    font-weight: normal;
+    font-size: 0.8rem;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .masterDetail {
+    background-color: #333;
+    color: #fff;
+  }
+  .detail {
+    color: #fff;
+    background-color: #444444;
+    border-left: 1px solid #555555;
+  }
+}
+
+.emptyMessageContainer {
+  display: flex;
+  height: 100%;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  justify-content: center;
+  text-align: center;
 }
